# rag-agent-api

./: .gitignore  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
api/: .dockerignore  .env.example  Dockerfile  pyproject.toml
api/chroma_db/: chroma.sqlite3
api/src/: auth.py  di.py  main.py  settings.py
api/src/agents/: base_agent.py  conversational_agent.py  knowledge_agent.py  middlewares.py  rag_agent.py
api/src/agents/prompts/: conversational_agent.py  rag_agent.py
api/src/agents/tools/: rag_tools.py  sources_tools.py
api/src/routes/: agent_routes.py  agents_routes.py  files_routes.py  sources_routes.py
api/src/schemas/: agents.py  sources.py
api/src/services/: chroma_service.py  embeddings_service.py  files_service.py  pdf_service.py  sources_service.py
frontend/: .env.example  Dockerfile  main.py  pyproject.toml
frontend/controllers/: api_client.py
frontend/views/: chat_view.py  sidebar_view.py  sources_view.py
